VBScan 0.1.3 - Fixed Reported Bugs

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@
 VBScan 0.1.3
 ------------------------
   - Change Default UserAgent
+  - Fixed admincp/modcp finder bug
   - Fixed Reported Bugs
 
 
